@@ -270,6 +270,7 @@ Version 1.11.0-svn:
      added to game description
    * Fixed bug #19322: Empty sides not being listed at the status table
    * Fixed bug #19681: Use the created cache instead of rebuilding it all the time
+   * Fixed bug #16544: Fail to read `empty' cache files.
    * Fix bug #19681: Cache is never valid
 
 Version 1.10.0:
